logs/magicmock.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/magicmock'...
Listing './lib/python3.5/site-packages/magicmock/ClientAPI'...
Compiling './lib/python3.5/site-packages/magicmock/ClientAPI/__init__.py'...
***   File "./lib/python3.5/site-packages/magicmock/ClientAPI/__init__.py", line 34
    print "unrecognized path list!"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/magicmock/Http'...
Compiling './lib/python3.5/site-packages/magicmock/Http/HttpHandler.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/HttpHandler.py", line 72
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/MockController.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/MockController.py", line 71
    print response
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/magicmock/Http/web'...
Compiling './lib/python3.5/site-packages/magicmock/Http/web/application.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/application.py", line 284
    except web.HTTPError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/browser.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/browser.py", line 49
    print 'requesting', req.get_method(), req.get_full_url()
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/magicmock/Http/web/contrib'...
Compiling './lib/python3.5/site-packages/magicmock/Http/web/db.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/db.py", line 81
    raise UnknownParamstyle, paramstyle
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/debugerror.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/debugerror.py", line 283
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/form.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/form.py", line 100
    raise KeyError, i
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/httpserver.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/httpserver.py", line 75
    except socket.error, socket_err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/net.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/net.py", line 120
    raise ValueError, ':'.join(ip) + ' is not a valid IP address/port'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/python23.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/python23.py", line 17
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/session.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/session.py", line 239
    raise ValueError, "Bad key: %s" % repr(key)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/template.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/template.py", line 469
    raise ParseError, 'Unknown statement: %s' % repr(keyword)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/utils.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/utils.py", line 75
    except KeyError, k:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/webapi.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/webapi.py", line 270
    raise ValueError, 'invalid characters in header'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/magicmock/Http/web/wsgiserver'...
Compiling './lib/python3.5/site-packages/magicmock/Http/web/wsgiserver/__init__.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/wsgiserver/__init__.py", line 616
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/wsgiserver/ssl_builtin.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/wsgiserver/ssl_builtin.py", line 43
    except ssl.SSLError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/Http/web/wsgiserver/ssl_pyopenssl.py'...
***   File "./lib/python3.5/site-packages/magicmock/Http/web/wsgiserver/ssl_pyopenssl.py", line 70
    except SSL.SysCallError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/magicmock/Log'...
Listing './lib/python3.5/site-packages/magicmock/Sample'...
Listing './lib/python3.5/site-packages/magicmock/Sample/APITemplates'...
Listing './lib/python3.5/site-packages/magicmock/Sample/JsonTemplates'...
Listing './lib/python3.5/site-packages/magicmock/Sample/conf'...
Listing './lib/python3.5/site-packages/magicmock/Sample/ssl'...
Compiling './lib/python3.5/site-packages/magicmock/Utils.py'...
***   File "./lib/python3.5/site-packages/magicmock/Utils.py", line 170
    print self.method.upper() + ' ' + url
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/magicmock/__init__.py'...
***   File "./lib/python3.5/site-packages/magicmock/__init__.py", line 80
    print "Usage: magicmocksetup <dest dir>"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/magicmock-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
